; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_dom.c_test_history.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_dom.c_test_history.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@S_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [26 x i8] c"get_history failed: %08x\0A\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"history = NULL\0A\00", align 1
@DIID_DispHTMLHistory = common dso_local global i32 0, align 4
@IID_IOmHistory = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [9 x i8] c"[object]\00", align 1
@.str.3 = private unnamed_addr constant [17 x i8] c"history2 = NULL\0A\00", align 1
@.str.4 = private unnamed_addr constant [21 x i8] c"history != history2\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @test_history to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_history(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  store i32* null, i32** %3, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i64 @IHTMLWindow2_get_history(i32* %6, i32** %3)
  store i64 %7, i64* %5, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load i64, i64* @S_OK, align 8
  %10 = icmp eq i64 %8, %9
  %11 = zext i1 %10 to i32
  %12 = load i64, i64* %5, align 8
  %13 = call i32 (i32, i8*, ...) @ok(i32 %11, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i64 %12)
  %14 = load i32*, i32** %3, align 8
  %15 = icmp ne i32* %14, null
  %16 = zext i1 %15 to i32
  %17 = call i32 (i32, i8*, ...) @ok(i32 %16, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @test_disp2(i32* %18, i32* @DIID_DispHTMLHistory, i32* @IID_IOmHistory, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0))
  store i32* null, i32** %4, align 8
  %20 = load i32*, i32** %2, align 8
  %21 = call i64 @IHTMLWindow2_get_history(i32* %20, i32** %4)
  store i64 %21, i64* %5, align 8
  %22 = load i64, i64* %5, align 8
  %23 = load i64, i64* @S_OK, align 8
  %24 = icmp eq i64 %22, %23
  %25 = zext i1 %24 to i32
  %26 = load i64, i64* %5, align 8
  %27 = call i32 (i32, i8*, ...) @ok(i32 %25, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i64 %26)
  %28 = load i32*, i32** %4, align 8
  %29 = icmp ne i32* %28, null
  %30 = zext i1 %29 to i32
  %31 = call i32 (i32, i8*, ...) @ok(i32 %30, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.3, i64 0, i64 0))
  %32 = load i32*, i32** %3, align 8
  %33 = load i32*, i32** %4, align 8
  %34 = call i32 @iface_cmp(i32* %32, i32* %33)
  %35 = call i32 (i32, i8*, ...) @ok(i32 %34, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.4, i64 0, i64 0))
  %36 = load i32*, i32** %4, align 8
  %37 = call i32 @IOmHistory_Release(i32* %36)
  %38 = load i32*, i32** %3, align 8
  %39 = call i32 @IOmHistory_Release(i32* %38)
  ret void
}

declare dso_local i64 @IHTMLWindow2_get_history(i32*, i32**) #1

declare dso_local i32 @ok(i32, i8*, ...) #1

declare dso_local i32 @test_disp2(i32*, i32*, i32*, i8*) #1

declare dso_local i32 @iface_cmp(i32*, i32*) #1

declare dso_local i32 @IOmHistory_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
